@@ -1,4 +1,4 @@
-DIST acsccid-1.0.6.tar.bz2 371670 SHA256 6079b87228ac2411cce2ee1111db12cb08e3d774b8f3cfd38ed6e5d27071387e SHA512 edc2336584ea2ca46e5a3b29f39ef6c2f5e7951e5b0938e276177ab9dffe85145ab8dc52d663050d9829284b9f5ab110eedd1ab17064461d2dd2d0c369190394 WHIRLPOOL b0b332206f82dfb08dd42075a74267abacd8cdbfb45ea048444736c474f4c5a3abdec2737c43f3db04eefcaaa37cf7412e302a462c3fc84bbaeece08fa7be9d3
-EBUILD acsccid-1.0.6.ebuild 931 SHA256 50b9e4cbba81ef7f0a0ed3ca86e015f573b30719d578b0b9e537a145e02884b2 SHA512 746894bf2e4ffdf4259bcdc57b52cd86db1052650f85f47aa28a34be680cc4007fc938deb2ab702fe0b7a795b7f61c7963ad69791f75402e4cac9072ac5439db WHIRLPOOL 16cff7c634b0addc6588e2ad524d60e2a0cc31f13257bb19dd2439fa060e7102392a7d97ea67f9cfe36c630faeabc7998f18c43cf9d0d711502b32558a428519
-MISC ChangeLog 761 SHA256 014429d9b958158e9bf34dd21abd13353fcaccfcc6074bc4e8bab1a3d93fb1fd SHA512 54bbf337da3df2bd87195e2861d623a55689f94440da95373508f0c7a030d1db2a69b306bc5bb32a6345f4ae1ca90e09ad5214cb170376faec09565ebceca4f2 WHIRLPOOL 307fbfd67a3e676ee3c469fdf8a58db2ec078e05e0cea0fb16d65487edadf9905ffca22201bae89459c1cf68f00e078e882ac42031fb1b977be54cf0a5c37ea4
+DIST acsccid-1.0.8.tar.bz2 371820 SHA256 1c2ff62d8d8621237c2ee97f0786f508289cf5381d3f36a2c313710ae316f29f SHA512 472dee7bd6825a52c3a6e4d1823798a14c7b9738e48c9bd32f2a09da50722bf04fa412f10296a62b0d18329e6b57bdd4d986fa718102485561566464a5ba688d WHIRLPOOL 309f9234cc9d9ace0a2f1fc4a6b2db008133ea83a109992cc8d3a0e21d058b1ca10d3643f9dc7cf662d858053602da7cfe4fad36ff42aedd7bb959a367623b81
+EBUILD acsccid-1.0.8.ebuild 1005 SHA256 35be45d25fb73e1782ea69c8053b227ff03ccf9c3e756a929835b507d4dcade4 SHA512 e7bd8a922bddb4d00c48bf89a5c2b9fb3ee8754d48941fb474e6c41c1768a01255a7446b609b8105527d5c7d7df9e98fc159d4ddb69958487123544a9bf57fdf WHIRLPOOL 7c5cd4a946998cf3311b31e8d1ea993e98b7837ce73f36e9c64f077b4ea8f0dfa0327e66b4c6a7c2aaec41bf7b563ecb57a6489aae869947545e57db4dedd5d8
+MISC ChangeLog 938 SHA256 239c64cbc0bd4121b9ff402b91872ced21421fca31df530ae8598affa2d74bf0 SHA512 826ee7f41fb2abb2094d67df0b0e5bdb3ebe994df8d2887b0201eaa0065a8b9be17f4975ab38461fb95738b81f7f8e0925690f68e4de14cadb3b1af8a60083c3 WHIRLPOOL 4ca5d656df96463794689c6c363313b97de9d38219add7c472d88dfa85cae3565999629159374719a2a3c51c674932f548b09cd9c87d2e43f8ab32a43aee5f3d
 MISC metadata.xml 238 SHA256 e9ecafb1042467e378b827325cf91c88400453f4f695a1d203d6a728e25f9cbc SHA512 124797f40af8acf747e452277fe4d87cd21fbb6c27b916a318c76e708d12e56f953dd96e80a3c0b5ef4d6ff2832dc60b26e5bf47a27580c6f6d8307ab2132638 WHIRLPOOL 9d897981697c8d98c269c0eeaf615d5874feb564da469bc2ab05f071316433026ebc74a56c9fd34469eab82df5c4e396e602b3504906ba3682fcca3e6698020b
