@@ -8,14 +8,15 @@ inherit multilib eutils udev
 
 SLOT="0"
 LICENSE="LGPL-2.1"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64 ~x86 ~arm"
 DESCRIPTION="Generic driver for ACS (CCID and non-CCID) Smart Card Reader."
 
 SRC_URI="mirror://sourceforge/${PN}/${PV}/${P}.tar.bz2"
 HOMEPAGE="http://acsccid.sourceforge.net/"
 
+#unlike app-crypt/ccid, libusb-compat is required (virtual/libusb:0)
 RDEPEND=">=sys-apps/pcsc-lite-1.8.3
-	virtual/libusb:1
+	virtual/libusb:0
 	!app-crypt/ccid
 	!app-crypt/acr38u"
 DEPEND="${RDEPEND}
