@@ -2,6 +2,13 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*acsccid-1.0.8 (10 Oct 2014)
+
+  10 Oct 2014; Vincent Hardy <vincent.hardy.be@gmail.com>
+  +acsccid-1.0.8.ebuild:
+  tested on BeagleBone Black : add ~arm keyword
+  Version bump
+
 *acsccid-1.0.6 (23 May 2014)
 
   23 May 2014; Vincent Hardy <vincent.hardy.be@gmail.com>
